[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/BohrokIdle.png" type="Texture" id=1]
[ext_resource path="res://custom_classes/health_system.gd" type="Script" id=2]
[ext_resource path="res://game_objects/enemies/BohrokEnemy.gd" type="Script" id=3]

[sub_resource type="CylinderShape" id=1]
height = 2.02041
radius = 0.86574

[sub_resource type="Animation" id=2]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[node name="BohrokEnemy" type="KinematicBody" groups=["enemy"]]
script = ExtResource( 3 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
billboard = 2
texture = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="HealthSystem" type="Node" parent="."]
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="NavigationAgent" type="NavigationAgent" parent="."]
target_desired_distance = 1.6
avoidance_enabled = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="enemy_is_dead" from="HealthSystem" to="." method="_on_HealthSystem_enemy_is_dead"]
[connection signal="velocity_computed" from="NavigationAgent" to="." method="_on_NavigationAgent_velocity_computed"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
